# Sleigh

./: .gitignore  README.md  README_zh.md  docker-compose.yml  install_server.sh
.github/workflows/: publish-python-sdk-testpypi.yml
docs/: api_reference.md  code_write_api.md
examples/: langchain_sleigh_runtime_tool.py  mcp_sleigh_runtime_server.py
python_sdk/: README.md  pyproject.toml
python_sdk/sleigh_sdk/: __init__.py  client.py  langchain_tool.py  mcp_server.py
sdks/python_sdk/: README.md  README_langchain.md  README_mcp.md
sdks/python_sdk/sdk/: README.md  mcp_server.py  pyproject.toml
sdks/python_sdk/sdk/src/sdk/: __init__.py  client.py  langchain_tool.py  mcp_server.py
sdks/python_sdk/sdk/src/sleigh_sdk/: client.py  langchain_tool.py  mcp_server.py
server/: .dockerignore  Dockerfile  go.mod  go.sum
server/cmd/server/: main.go
server/internal/config/: config.go
server/internal/errors/: errors.go
server/internal/http/: router.go  router_quality_test.go  router_test.go
server/internal/id/: id.go
server/internal/monitor/: service.go
server/internal/notifier/: http.go  retry.go
server/internal/sandbox/: backend.go  cursor.go  service.go  workspace_snapshot.go
server/internal/sandbox/docker/: backend.go  memory_pressure_integration_test.go
server/internal/store/sqlite/: store.go
server/internal/telemetry/: otel.go
