[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sleigh-sdk"
version = "0.1.23"
description = "Python SDK for Sleigh runtime server."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
langchain = [
  "langchain>=0.2.0",
  "pydantic>=2.0.0",
]
mcp = [
  "mcp>=1.0.0",
  "exceptiongroup>=1.0.2; python_version < \"3.11\"",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["sleigh_sdk*"]
